fix section after scrollytelling overlaping

--- a/src/components/sections/home/overboard-story/overboard-story.module.scss
+++ b/src/components/sections/home/overboard-story/overboard-story.module.scss
@@ -2,11 +2,7 @@
 @import 'css/helpers';
 
 .section {
-  --padding: 0px;
-
   position: relative;
-  padding: var(--padding) 0px;
-  margin: calc(-1 * var(--padding)) 0px;
 }
 
 .store-container {
